force-app/main/default/objects/Jadwal_Karyawan__c/Jadwal_Karyawan__c.object-meta.xml
<CustomObject>
    <label>Master Jadwal Karyawan</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Jadwal Karyawan</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>