force-app/main/default/objects/Jadwal_Karyawan__c/fields/ID_Karyawan__c.field-meta.xml
<CustomField>
    <fullName>ID_Karyawan__c</fullName>
    <formula>Nama_Karyawan__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Karyawan</label>
    <type>Text</type>
</CustomField>