force-app/main/default/objects/Jadwal_Karyawan__c/fields/Jam_Masuk__c.field-meta.xml
<CustomField>
    <fullName>Jam_Masuk__c</fullName>
    <formula>Opsi_Jadwal__r.Login__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jam Masuk</label>
    <type>Time</type>
</CustomField>