force-app/main/default/objects/Jadwal_Karyawan__c/fields/Jam_Pulang__c.field-meta.xml
<CustomField>
    <fullName>Jam_Pulang__c</fullName>
    <formula>Opsi_Jadwal__r.Logout__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jam Pulang</label>
    <type>Time</type>
</CustomField>