force-app/main/default/objects/Jadwal_Karyawan__c/fields/Kode_Jadwal__c.field-meta.xml
<CustomField>
    <fullName>Kode_Jadwal__c</fullName>
    <formula>Opsi_Jadwal__r.Kode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kode Jadwal</label>
    <type>Text</type>
</CustomField>