force-app/main/default/objects/Jadwal_Karyawan__c/fields/Lokasi__c.field-meta.xml
<CustomField>
    <fullName>Lokasi__c</fullName>
    <label>Lokasi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lokasi</valueSetName>
    </valueSet>
</CustomField>