force-app/main/default/objects/Jadwal_Karyawan__c/fields/Opsi_Jadwal__c.field-meta.xml
<CustomField>
    <fullName>Opsi_Jadwal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opsi Jadwal</label>
    <referenceTo>Opsi_Jadwal__c</referenceTo>
    <relationshipName>Jadwal_Karyawan</relationshipName>
    <type>Lookup</type>
</CustomField>