force-app/main/default/objects/Jadwal_Karyawan__c/fields/Periode__c.field-meta.xml
<CustomField>
    <fullName>Periode__c</fullName>
    <formula>CASE(MONTH( Tanggal__c ), 1, &apos;Januari&apos;, 2, &apos;Februari&apos;, 3, &apos;Maret&apos;, 4, &apos;April&apos;, 5, &apos;Mei&apos;, 6, &apos;Juni&apos;, 7, &apos;Juli&apos;, 8, &apos;Agustus&apos;, 9, &apos;September&apos;, 10, &apos;Oktober&apos;, 11, &apos;November&apos;, &apos;Desember&apos;) +  &apos; &apos; + TEXT(YEAR(Tanggal__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periode</label>
    <type>Text</type>
</CustomField>