force-app/main/default/objects/Jadwal_Karyawan__c/fields/Tanggal__c.field-meta.xml
<CustomField>
    <fullName>Tanggal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tanggal</label>
    <type>Date</type>
</CustomField>