force-app/main/default/objects/Jadwal_Karyawan__c/listViews/ADMIN_JADWAL_BULAN_INI.listView-meta.xml
<ListView>
    <fullName>ADMIN_JADWAL_BULAN_INI</fullName>
    <columns>NAME</columns>
    <columns>Nama_Karyawan__c</columns>
    <columns>ID_Karyawan__c</columns>
    <columns>Tanggal__c</columns>
    <columns>Opsi_Jadwal__c</columns>
    <columns>Jam_Masuk__c</columns>
    <columns>Jam_Pulang__c</columns>
    <columns>Lokasi__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Nama_Karyawan__c</field>
        <operation>equals</operation>
        <value>Zulfikri</value>
    </filters>
    <label>ADMIN -  JADWAL BULAN INI</label>
</ListView>