force-app/main/default/objects/Jadwal_Karyawan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nama_Karyawan__c</columns>
    <columns>ID_Karyawan__c</columns>
    <columns>Extension__c</columns>
    <columns>Opsi_Jadwal__c</columns>
    <columns>Kode_Jadwal__c</columns>
    <columns>Tanggal__c</columns>
    <columns>Lokasi__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>