force-app/main/default/objects/Jadwal_Karyawan__c/listViews/Allx.listView-meta.xml
<ListView>
    <fullName>Allx</fullName>
    <columns>NAME</columns>
    <columns>Nama_Karyawan__c</columns>
    <columns>ID_Karyawan__c</columns>
    <columns>Tanggal__c</columns>
    <columns>Opsi_Jadwal__c</columns>
    <columns>Jam_Masuk__c</columns>
    <columns>Jam_Pulang__c</columns>
    <columns>Lokasi__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>